=======
CHANGES
=======

3.12 (unreleased)
===================

- Added ``zcml`` extra dependencies and fixed dependencies of
  ``configure.zcml`` on other packages' ``meta.zcml``.


3.11.0 (2010-08-13)
===================

- Support the HTTP ETag header for file resources.  ETag generation can be
  customized or disabled by providing an IETag multi-adapter on
  (IFileResource, your-application-skin).

3.10.3 (2010-04-30)
===================

- Prefer the standard libraries doctest module to the one from zope.testing.

3.10.2 (2009-11-25)
===================

- The previous release had a broken egg, sorry.

3.10.1 (2009-11-24)
===================

- Import hooks functionality from zope.component after it was moved there from
  zope.site. This lifts the dependency on zope.site and thereby, ZODB.

- Import ISite and IPossibleSite from zope.component after they were moved
  there from zope.location.

3.10.0 (2009-09-25)
===================

- Add an ability to forbid publishing of some files in the resource directory,
  this is done by fnmatch'ing the wildcards in the ``forbidden_names``class
  attribute of ``DirectoryResource``. By default, the ``.svn`` is in that
  attribute, so directories won't publish subversion system directory that can
  contain private information. 

3.9.0 (2009-08-27)
==================

Initial release. This package was splitted off zope.app.publisher as a part
of refactoring process.

Additional changes that are made during refactoring:

 * Resource class for file resources are now selected the pluggable way.
   The resource directory publisher and browser:resource ZCML directive
   now creating file resources using factory utility lookup based on the
   file extension, so it's now possible to add new resource types without
   introducing new ZCML directives and they will work inside resource
   directories as well.
   
   NOTE: the "resource_factories" attribute from the DirectoryResource